--- a/Chalkable.Web/assets/jade/activities/reports/ComprehensiveProgressReport.jade
+++ b/Chalkable.Web/assets/jade/activities/reports/ComprehensiveProgressReport.jade
@@ -1,6 +1,5 @@
 .dialog-window.report-window
    .close.close-btn.dark
-   date = new chlk.models.common.ChlkDate()
    h1=Msg.Create_Report
    .report-buttons.panel-bg
       +ActionLinkList(self.buildReportLinksData('comprehensiveProgressReport'))
@@ -13,30 +12,7 @@
       .report-content
          TABLE.report-table
             TR
-               TD.item-3
-                  h3=Msg.Start_date
-                  +DatePicker('startDate', self.getStartDate() || date)(
-                  data-options={
-                        showOtherMonths: true,
-                        selectOtherMonths: true,
-                        calendarCls: 'for-dialog',
-                        minDate: self.getStartDate().getDate(),
-                        maxDate: self.getEndDate().getDate()
-                     },
-                     class="validate[required]"
-                  ).report-date-picker
-               TD.item-3
-                  h3=Msg.End_date
-                  +DatePicker('endDate', self.getEndDate() || date)(
-                  data-options={
-                        showOtherMonths: true,
-                        selectOtherMonths: true,
-                        calendarCls: 'for-dialog',
-                        minDate: self.getStartDate().getDate(),
-                        maxDate: self.getEndDate().getDate()
-                     },
-                     class="validate[required]"
-                  ).report-date-picker
+               +ReportDatePickers(self.getStartDate(), self.getEndDate())
                TD.item-3
             TR
                TD.item-3
