updated standards and disciplines css

--- a/Chalkable.Web/assets/sass2/4_pages/_class-disciplines-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_class-disciplines-page.sass
@@ -52,7 +52,7 @@
 
 
   .saved-block
-    background: url(images/discipline/saved.png) 0 center no-repeat
+    background: image_url('images/discipline/saved.png') 0 center no-repeat
     padding-left: 25px
 
 
@@ -61,3 +61,10 @@
 
   .saved .saved-block
     display: block
+
+  .with-discipline
+    background: image_url('images/discipline/width-discipline.png') 0 center no-repeat
+    width: 24px
+    height: 21px
+    margin-right: 22px
+    margin-top: 30px
