--- a/Chalkable.Web/assets/sass2/5_dialogs/_add-standards-dialog.sass
+++ b/Chalkable.Web/assets/sass2/5_dialogs/_add-standards-dialog.sass
@@ -65,6 +65,10 @@
     cursor: pointer
     color: #9c9c9c
 
+    &.active
+      color: white
+      background: #2f7790
+
   .right-triangle
     width: 0
     height: 0
