fixed autocomplete dropdown

--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -26,6 +26,7 @@
 @import "2_atoms/checkbox"
 @import "2_atoms/form"
 @import "2_atoms/attachments-and-applications"
+@import "2_atoms/autocomplete"
 
 @import "3_molecules/layout"
 @import "3_molecules/header"
