fixed CHLK-3488 Teacher. Attendance. Tooltips are cutted of

--- a/Chalkable.Web/assets/sass2/2_atoms/_form.sass
+++ b/Chalkable.Web/assets/sass2/2_atoms/_form.sass
@@ -10,6 +10,10 @@
   > *
     vertical-align: top
 
+  .formErrorContent
+    white-space: nowrap
+
+
 .form-buttons, .buttons-container
   margin-top: 10px
   text-align: center
